General
-------------------------------------------------------------------------------

...

Removed functionality
-------------------------------------------------------------------------------

* Static Published Pages

The feature to statically publish a page from the Admin Panel has been dropped.
There are better ways to achieve such a functionality, like e.g.
EXT:nc_staticfilecache.


Workspaces
-------------------------------------------------------------------------------

...

Other general improvements
-------------------------------------------------------------------------------

* New scheduler task to delete old data from tables

The scheduler task 'Table garbage collection' can be used to delete old data
from growing tables like log tables on a regular basis. Additional tables that
can be cleaned up must be registered in $TYPO3_CONF_VARS['SC_OPTIONS']
['scheduler']['tasks']['tx_scheduler_TableGarbageCollection']['options']
['tables'] with its table name and a field. After that they can
be selected in the scheduler task.


* New scheduler task to delete old files from fileadmin trash directories

The scheduler task 'Fileadmin recycler garbage collection' can be used to
definitely delete old files from _recycler_ directories. When a _recycler_
directory exists within the path of a file to delete via the File module, the
file is not actually deleted, but stored in the _recycler_ folder.
This new task now deletes all files insider _recycler_ folders that have been
moved there for longer than a given number of days.

* New option to customize the cookie names used by TYPO3

It is now possible to customize the cookie names used by TYPO3 to avoid clashes
when running more installations on the same domain. The names used can be con-
figured with:
$TYPO3_CONF_VARS['FE']['cookieName'] and
$TYPO3_CONF_VARS['BE']['cookieName'].


-------------------------------------------------------------------------------
Backend